--- a/WeifangDemo/app/src/main/res/layout/activity_main.xml
+++ b/WeifangDemo/app/src/main/res/layout/activity_main.xml
@@ -56,20 +56,41 @@
         android:layout_height="40px"
         android:layout_alignParentBottom="true"
         android:visibility="visible">
-        <ImageView
-            android:layout_width="26px"
-            android:layout_height="20px"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="5px"
-            android:src="@drawable/icon_ka"/>
+        <!--<ImageView-->
+            <!--android:layout_width="26px"-->
+            <!--android:layout_height="20px"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_marginLeft="5px"-->
+            <!--android:src="@drawable/icon_ka"/>-->
+
         <TextView
-            android:id="@+id/card_no_tv"
+            android:id="@+id/tv_terminal_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16px"
-            android:text="@string/str_init_time"
+            android:text="@string/str_terminal_id"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="36px"
+            android:layout_marginLeft="5px"
+            android:textColor="@color/white"/>
+
+        <!--<TextView-->
+            <!--android:id="@+id/card_no_tv"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:textSize="16px"-->
+            <!--android:text="@string/str_init_time"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_marginLeft="66px"-->
+            <!--android:textColor="@color/white"/>-->
+
+        <TextView
+            android:id="@+id/terminal_no_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16px"
+            android:text=""
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="66px"
             android:textColor="@color/white"/>
 
     </RelativeLayout>
@@ -79,8 +100,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="30px"
-        android:layout_marginBottom="40px"
-        android:background="@drawable/bg2">
+        android:layout_marginBottom="40px">
+        <!--android:background="@drawable/bg2">-->
 
 
         <LinearLayout
@@ -125,61 +146,61 @@
             android:layout_centerInParent="true"
             android:orientation="horizontal"
             android:gravity="center"
-            android:visibility="visible">
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableBottom="@drawable/sticking_card"
+                />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/card_info_ll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:orientation="vertical"
+            android:gravity="left"
+            >
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="vertical">
-
+                android:orientation="horizontal">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/str_welcome"
-                    android:textColor="@color/welcome_color"
-                    android:textSize="24px"
-                    android:textStyle="bold"/>
-
-
+                    android:drawableTop="@drawable/icon_kahao"
+                    android:text="卡号"
+                    />
                 <TextView
-                    android:id="@+id/device_name_tv"
+                    android:id="@+id/tv_card_no"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/str_device_name"
-                    android:textColor="@color/white"
-                    android:textSize="20px"
-                    android:layout_marginTop="10px"
-                    android:textStyle="bold"/>
-
+                    android:text="1111111111111111111"
+                    />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_marginLeft="10px"
-                android:orientation="vertical">
-                <ImageView
-                    android:id="@+id/qr_iv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:id="@+id/sn_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/str_sn_create_tip"
-                    android:textColor="@color/white"
-                    android:textSize="12px"/>
-
+                android:orientation="horizontal">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/str_sn_create_tip"
-                    android:textColor="@color/white"
-                    android:layout_marginTop="5px"
-                    android:textSize="15px"
-                    android:textStyle="bold"/>
+                    android:drawableTop="@drawable/icon_yue"
+                    android:text="余额"
+                    />
+                <TextView
+                    android:id="@+id/tv_balance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="1234"
+                    />
             </LinearLayout>
+
         </LinearLayout>
 
     </RelativeLayout>
