mac2 return 9032, need to debug

--- a/WeifangDemo/app/src/main/res/layout/activity_main.xml
+++ b/WeifangDemo/app/src/main/res/layout/activity_main.xml
@@ -167,6 +167,7 @@
             android:layout_centerInParent="true"
             android:orientation="vertical"
             android:gravity="left"
+            android:visibility="gone"
             >
 
             <LinearLayout
